--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@
 
 body {
   padding: 0;
+  background-color: #00d6b2;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
