--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,3 +1,29 @@
-<p>This is the home view.</p>
+<div class="page-header">
+  <h2>Home</h2>
+</div>
+<div class="row">
+  <div class="col-sm-8">
+    This is the home view.
+    <div class="clearfix">
+      <div class="pull-left">
+        pull-left<br/>
+        fdfdsfdfds<br/>
+        fdfdsfsfsdff
+      </div>
+      <div class="pull-right">
+        pull-right<br/>
+        fdfdsfdfds<br/>
+        fdfdsfsfsdff
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    Here is our sidebar
+  </div>
+
+</div>
+
+
+
 
 
