--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,26 +1,14 @@
 <div class="page-header">
-  <h2>Home</h2>
+  <h2>Matrik Home</h2>
 </div>
 <div class="row">
-  <div class="col-sm-8">
-    This is the home view.
+  <div class="col-sm-12">
     <div class="clearfix">
       <div class="pull-left">
-        pull-left<br/>
-        fdfdsfdfds<br/>
-        fdfdsfsfsdff
-      </div>
-      <div class="pull-right">
-        pull-right<br/>
-        fdfdsfdfds<br/>
-        fdfdsfsfsdff
+        <info-widgets></info-widgets>
       </div>
     </div>
   </div>
-  <div class="col-sm-4">
-    Here is our sidebar
-  </div>
-
 </div>
 
 
