--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -57,6 +57,7 @@ body {
   }
 }
 
+
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
@@ -86,5 +87,32 @@ body {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
+  }
+}
+
+/* Custom infoItem header */
+.infoItemHeader {
+  margin-bottom: 2px;
+  background-color: #9e0505;
+  color: ghostwhite;
+  font-size: 18px;
+  border: 1px solid #9e0505;
+
+}
+
+/* Custom infoItem header */
+.infoItemBody {
+  border: 1px solid #9e0505;
+  border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 2px;
+  background-color: transparent;
+  color: #2c4359;
+
+  /* Make the masthead heading the same height as the navigation */
+  h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 20px;
+    padding-bottom: 19px;
   }
 }
